# llm-glass

./: .gitignore  README.md  glass_llm.ipynb  newfilters.py  output_file.csv  pyproject.toml  refractive.py  tliquidus.py
data/: patent_examples.txt  patente.txt
data/filtered/: LEFT_Final_df(264x36).csv  LEFT_compounds_and_refractive(264x35).csv  RIGHT_Final_df(332x36).csv  RIGHT_compounds_and_refractive(332x35).csv  US11485676B2-US20240025797A1 - merged.xlsx  US11485676B2-US20240025797A1.csv  US11485676B2-US20240025797A1.xlsx  USA_3_patents_analysis(before Siebers).csv  USA_3_patents_analysis.csv  USA_3_patents_analysis.xlsx  classifications.csv  compounds_and_refractive_only_df.csv  compounds_and_refractive_post_processed.csv  dataframe_compounds_without_properties.csv  equal_lines.csv  equal_lines.xlsx  excluded_by_filterbynotplus.csv  excluded_by_removeemptycolumns.csv  excluded_by_removerowswithna.csv  excluded_by_sumlines.csv  final_df.csv  not_equal_lines.csv
data/raw/: US11485676B2-US20240025797A1.rar  merged_df.csv  teste
filter_table/: README.md  filter_columns_by_desired_compounds.py  functions.py  testcode.py  teste.py  zThomaz.py
filter_table/Gustavo_codes/: filter_columns.py  filter_columns_and_uses_path.py
filter_table/filtered/: excluded.csv  excluded_by_sumlines.csv  final_df.csv  has_plus.csv  (+2 more)
grammars/: glasses.gbnf
json/: desired_compounds.json  properties.json
notebooks/: llm-test.ipynb
src/: 0_get_patent_info.py  1_read_html_tables.py  2_split_tables.py  3_merge.py  llm-test.ipynb  run_cppllama.py  run_llama.py
thomaz/: limpador.py
(+55 files in other folders)
