[tool.poetry]
name = "llm-glass"
version = "0.1.0"
description = "Use this config file as template for your project."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.2.5"
notebook = "^7.2.2"
beautifulsoup4 = "^4.12.3"
langchain-ollama = "^0.2.0"
langchain-community = "^0.3.1"
docx2txt = "^0.8"
pytesseract = "^0.3.13"
pdf2image = "^1.17.0"
langchain = "^0.3.2"
llama-cpp-python = "^0.3.1"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
profile = "black"

[tool.flake8]
max-line-length = 120
max-complexity = 20
exclude = ".git"
select = "B,C,E,F,W,T4,B9"
ignore = "E203, E266, E501, W503, F403, F401"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
black = "^24.3.0"
isort = "^5.13.2"

[tool.poetry.scripts]
post-update = "sh -c 'poetry update && pre-commit install'"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
